--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
 DEBUG=False
-SECRET_KEY='xdf&5o%ysfs)&0xugnza=4r-3ih0#jc!_0&47np)+qusuxho)-'
+SECRET_KEY='xdf&5o%ysfs)&0xugnza=4r-3ih0#jc!_0&47np)+kosuxho)-'
 
-DB_NAME=Nkunzi
-DB_USER=postgres
-DB_PASSWORD=Abigailmolusi28!
-DB_HOST=localhost
-DB_PORT=5433
+
 
