--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DEBUG=False
-SECRET_KEY='xdf&5o%ysfs)&0xugnza=4r-3ih0#jc!_0&47np)+kosuxho)-'
+SECRET_KEY='xdf&5o%ysfs)&0xugnza=4r-3ih0#jc!_0&47np)+qusuxho)-'
 
 
 
